K8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: chat-app

spec:
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
